src/components/navbar/Navbar.css
nav {
	background: var(--black);
	padding: 1rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	font-size: 1.2rem;
	width: 100%;
	position: relative;
	z-index: 1;
	border-bottom: 2px solid var(--gold);
	box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
}

.nav__active {
	position: fixed;
}

.home-link {
	height: 4rem;
	display: flex;
	align-items: center;
	color: #fff;
	text-decoration: none;
}

.logo {
	display: flex;
	height: 100%;
	width: 100%;
}

.nav-title {
	margin: 0 0 0 1rem;
	white-space: nowrap;
}

.fa-leaf {
	margin-left: 0.5rem;
	font-size: 1.6rem;
	color: greenyellow;
}

.fa-bars {
	color: #fff;
}

.hamburger {
	display: block;
	cursor: pointer;
}

.nav-menu {
	position: absolute;
	z-index: 999;
	top: calc(100% + 2px);
	left: 0;
	width: 100%;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	list-style: none;
	height: calc(100vh - 6rem - 2px);
	background: var(--gray-100);
	transform: translateX(-100%);
	transition: transform 750ms ease-in-out;
}

.nav-menu__active {
	transform: translateX(0);
}

.nav-menu li {
	display: grid;
	place-items: center;
	height: 25%;
	width: 100%;
	position: relative;
}

.nav-menu li::before {
	content: "";
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 0%;
	background: var(--bronze);
	z-index: -1;
	transition: height 250ms ease-out;
}

.nav-menu li:hover::before {
	height: 100%;
}

.nav-menu a {
	color: #fff;
	text-decoration: none;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100%;
	transition: color 250ms ease-out;
}

.nav-menu li:hover a {
	color: var(--black);
}

@media (min-width: 960px) {
	.hamburger {
		display: none;
	}

	.nav-menu {
		position: static;
		width: auto;
		margin: 0;
		padding: 0;
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		list-style: none;
		height: 100%;
		background: transparent;
		transform: none;
		transition: transform 0ms;
	}

	.nav-menu__active {
		transform: none;
	}

	.nav-menu li {
		height: auto;
		padding: 0.5rem 1rem;
		margin: 0;
		border-top: solid 2px var(--gold);
		border-bottom: solid 2px var(--gold);
	}

	.nav-menu li:nth-child(2n) {
		border-left: 2px solid var(--gold);
		border-right: 2px solid var(--gold);
	}

	.nav-menu li:first-child {
		border-left: 2px solid var(--gold);
		border-top-left-radius: 0.25rem;
		border-bottom-left-radius: 0.25rem;
	}
	.nav-menu li:last-child {
		border-right: 2px solid var(--gold);
		border-top-right-radius: 0.25rem;
		border-bottom-right-radius: 0.25rem;
	}
}

